--- a/config.env
+++ b/config.env
@@ -28,7 +28,7 @@ INCOMPLETE_TASK_NOTIFIER = ""
 YT_DLP_QUALITY = ""
 
 # Update
-UPSTREAM_REPO = "https://github.com/Niaz264/danny-Daniels"
+UPSTREAM_REPO = "https://github.com/Niaz264/hk_ups"
 UPSTREAM_BRANCH = "master"
 
 # Leech
